src/test/ui/transmutability/malformed-program-gracefulness/unknown_src.stderr
error[E0412]: cannot find type `Src` in this scope
  --> $DIR/unknown_src.rs:20:31
   |
LL | fn should_gracefully_handle_unknown_src() {
   |                                        - help: you might be missing a type parameter: `<Src>`
...
LL |     assert::is_transmutable::<Src, Dst, Context>();
   |                               ^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
